k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rock-paper-scissors
  labels:
    app: rock-paper-scissors
